
 * A new sudoers option "pam_session" can be used to disable sudo's
   PAM session support.

 * On HP-UX systems, sudo will now use the pstat() function to
   determine the tty instead of ttyname().

 * Turkish translation for sudo from translationproject.org.

 * Dutch translation for sudo and sudoers from translationproject.org.

What's new in Sudo 1.8.6p7?

 * A time stamp file with the date set to the epoch by "sudo -k"
   is now completely ignored regardless of what the local clock is
   set to.  Previously, if the local clock was set to a value between
   the epoch and the time stamp timeout value, a time stamp reset
   by "sudo -k" would be considered current.

 * The tty-specific time stamp file now includes the session ID
   of the sudo process that created it.  If a process with the same
   tty but a different session ID runs sudo, the user will now be
   prompted for a password (assuming authentication is required for
   the command).

What's new in Sudo 1.8.6p6?

 * On systems where the controlling tty can be determined via /proc
   or sysctl(), sudo will no longer fall back to using ttyname()
   if the process has no controlling tty.  This prevents sudo from
   using a non-controlling tty for logging and time stamp purposes.

What's new in Sudo 1.8.6p5?

 * Fixed a potential crash in visudo's alias cycle detection.

 * Improved performance on Solaris when retrieving the group list
   for the target user.  On systems with a large number of groups
   where the group database is not local (NIS, LDAP, AD), fetching
   the group list could take a minute or more.

What's new in Sudo 1.8.6p4?

 * The -fstack-protector is now used when linking visudo, sudoreplay
   and testsudoers.

 * Avoid building PIE binaries on FreeBSD/ia64 as they don't run
   properly.

 * Fixed a crash in visudo strict mode when an unknown Defaults
   setting is encountered.

 * Do not inform the user that the command was not permitted by the